packages/styles/src/layout/_section.scss
@use 'sass:map';

@use '../functions/tokens';
@use '../mixins/media';
@use '../tokens/components';
@use '../variables/breakpoints';

tokens.$default-map: components.$post-container;

.section {
  --post-section-max-width: 120rem;

  container: section / inline-size;
  margin-inline: auto;
  max-width: var(--post-section-max-width);

  .container &,
  .container-fluid & {
    $section-margin-inline: max((100vw - var(--post-section-max-width)) / 2, 0px);

    --post-section-width: calc(100cqw + 2 * var(--post-section-content-offset));
    --post-section-content-offset: calc(
      var(--post-container-offset, 0px) - #{$section-margin-inline}
    );

    margin-inline: calc(-1 * var(--post-section-content-offset));
    padding-inline: max(var(--post-container-padding-inline), var(--post-section-content-offset));
  }

  > .container,
  > .container-fluid {
    --post-section-width: 100cqw;
    --post-section-content-offset: calc(
      (var(--post-section-width) - var(--post-container-max-width)) * 0.5 +
        var(--post-container-padding-inline)
    );
  }

  @each $breakpoint in map.keys(breakpoints.$grid-breakpoints) {
    @include media.min($breakpoint) {
      @if $breakpoint == 'xs' {
        .align-section-stretch,
        .align-section-start,
        .align-section-end,
        .align-container-stretch,
        .align-container-start,
        .align-container-end {
          display: block;
          margin-inline: unset;
          min-width: unset;
          max-width: unset;
          width: unset;
        }

        .align-section-none,
        .align-container-none {
          margin-inline: 0;
          width: 100%;
        }

        .align-section-stretch {
          margin-inline: calc(var(--post-section-content-offset) * -1);
          width: var(--post-section-width);
        }

        .align-section-start {
          margin-inline-start: calc(var(--post-section-content-offset) * -1);
          width: calc(100% + var(--post-section-content-offset));
        }

        .align-section-end {
          margin-inline-end: calc(var(--post-section-content-offset) * -1);
          width: calc(100% + var(--post-section-content-offset));
        }

        .align-container-stretch {
          margin-inline: calc(var(--post-container-padding-inline) * -1);
          width: var(--post-container-max-width);
        }

        .align-container-start {
          margin-inline-start: calc(var(--post-container-padding-inline) * -1);
          width: calc(100% + var(--post-container-padding-inline));
        }

        .align-container-end {
          margin-inline-end: calc(var(--post-container-padding-inline) * -1);
          width: calc(100% + var(--post-container-padding-inline));
        }
      } @else {
        .align-section-#{$breakpoint}-stretch,
        .align-section-#{$breakpoint}-start,
        .align-section-#{$breakpoint}-end,
        .align-container-#{$breakpoint}-stretch,
        .align-container-#{$breakpoint}-start,
        .align-container-#{$breakpoint}-end {
          display: block;
          margin-inline: unset;
          min-width: unset;
          max-width: unset;
          width: unset;
        }

        .align-section-#{$breakpoint}-none,
        .align-container-#{$breakpoint}-none {
          margin-inline: 0;
          width: 100%;
        }

        .align-section-#{$breakpoint}-stretch {
          margin-inline: calc(var(--post-section-content-offset) * -1);
          width: var(--post-section-width);
        }

        .align-section-#{$breakpoint}-start {
          margin-inline-start: calc(var(--post-section-content-offset) * -1);
          width: calc(100% + var(--post-section-content-offset));
        }

        .align-section-#{$breakpoint}-end {
          margin-inline-end: calc(var(--post-section-content-offset) * -1);
          width: calc(100% + var(--post-section-content-offset));
        }

        .align-container-#{$breakpoint}-stretch {
          margin-inline: calc(var(--post-container-padding-inline) * -1);
          width: var(--post-container-max-width);
        }

        .align-container-#{$breakpoint}-start {
          margin-inline-start: calc(var(--post-container-padding-inline) * -1);
          width: calc(100% + var(--post-container-padding-inline));
        }

        .align-container-#{$breakpoint}-end {
          margin-inline-end: calc(var(--post-container-padding-inline) * -1);
          width: calc(100% + var(--post-container-padding-inline));
        }
      }
    }
  }
}

